--- a/main/templates/post_list.html
+++ b/main/templates/post_list.html
@@ -2,20 +2,20 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Все посты найденные по запросу "{{ subsrt }}"</title>
+    <title>Все посты найденные по запросу "{{substr}}"</title>
     <link rel="stylesheet" href="../../static/style.css">
 </head>
 <body>
 <main>
 
-    <a href="/static" class="link">Назад</a>
+    <a href="/" class="link">Назад</a>
 
-    <h1>Посты по запросу "{{ subsrt }}"</h1>
+    <h1>Посты по запросу "{{substr}}"</h1>
 
     {% for post in posts %}
     <div class="post">
-        <img src="{{ post.pic }}" width="100%" alt="">
-        <p>{{ post.content }}</p>
+        <img src="{{post.pic}}" width="100%" alt="">
+        <p>{{post.content}}</p>
     </div>
     <hr>
     {% endfor %}
